renamed libraries.styl fixed naming to use "_" rather than "-" for a few more things working on css for page footer fixed a bunch of whitespace issues

--- a/templates/stylus/input.styl
+++ b/templates/stylus/input.styl
@@ -1,10 +1,11 @@
-@import "libraries.less"
+@import "library"
+
 
 canvas {
 	border: 1px solid #000
 }
 
-#scoreContainer {
+#score_container {
 	display:inline-block
 
 	button {
@@ -26,7 +27,7 @@ canvas {
 	}
 }
 
-#typeContainer button {
+#type_container button {
 	width: 150px
 	height:50px
 	
@@ -36,7 +37,7 @@ canvas {
 	}
 }
 
-table#trackingDisplay {
+table#tracking_display {
 	border: solid 1px #000
 	margin-top: 10px
 	width: 330px
